# puzzle_cube

./: .gitattributes  .gitignore  Cargo.toml  index.html  puzzle_cube-39531a466991bc23.js  puzzle_cube-39531a466991bc23_bg.wasm  puzzle_cube-6da0477ecf2e2b5a.js  puzzle_cube-6da0477ecf2e2b5a_bg.wasm  puzzle_cube-8e843fef4bc1b7c3.js  puzzle_cube-8e843fef4bc1b7c3_bg.wasm  puzzle_cube-b6757a4c58bb79bb.js  puzzle_cube-b6757a4c58bb79bb_bg.wasm  puzzle_cube-bccee551198d7d0d.js  puzzle_cube-bccee551198d7d0d_bg.wasm  puzzle_cube-d09c1d9bc69d1569.js  puzzle_cube-d09c1d9bc69d1569_bg.wasm  puzzle_cube-d454f360ff67fb73.js  puzzle_cube-d454f360ff67fb73_bg.wasm  readme.md  rust-toolchain.toml  styles-28f74c9dace9af0d.css  styles.css
.github/workflows/: continuous_deployment.yml
benches/: bench.rs
src/: lib.rs  main.rs
src/core/: basic_cubes.rs  coordinate_cube.rs  corner_position.rs  cornerposition.rs  cube.rs  cube_invariant_getters.rs  cube_invariant_setters.rs  cube_property.rs  cubehelpers.rs  cubie_cube.rs  data_source.rs  data_source_creator.rs  definitions.rs  edge_position.rs  edgeposition.rs  facelet_cube.rs  facelet_position.rs  misc.rs  mod.rs  move.rs  moves copy.rs  moves.rs  phase_one_pruning.rs  phase_two_pruning.rs  solver.rs
src/state/: cube_state.rs  data_state.rs  mod.rs  transform.rs  view_state.rs
src/web/: app.rs  cubie_cube.rs  facelet.rs  facelet_cube.rs  mod.rs
tests/: my_tests.rs
tests/snapshots/: my_tests__corner_slice_depth.snap  my_tests__create_corner_symmetries.snap  my_tests__create_corners.snap  my_tests__create_flip_slice_rep.snap  (+10 more)
