[package]
name = "puzzle_cube"
version = "0.1.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
license = "MIT"
keywords = ["math", "game", "cube"]
edition= "2021"

[dependencies]
itertools = "0.10.3"
num = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = "1.13"
rand = {version = "0.8"}
getrandom = {version="0.2", features=["js"]}
strum_macros = {version= "0.24"}
strum = {version= "0.24"}
array-const-fn-init = "0.1.1"

# borsh = "0.9"

chrono = {version="0.4", features = ["serde", "wasmbind"]}

log = "0.4"
wasm-logger = "0.2"
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr",] }
yewdux = { git = "https://github.com/intendednull/yewdux.git" }

wasm-bindgen-futures = "0.4"
wasm-bindgen= { version = "0.2", features = ["serde"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]


[[bench]]
name = "bench"
harness = false

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 3


[dev-dependencies]
bencher= "0.1"
ntest = "0.7.5"

